--- a/EcommerseAdmin/EcommerseAdmin/Views/Home/About.cshtml
+++ b/EcommerseAdmin/EcommerseAdmin/Views/Home/About.cshtml
@@ -1,7 +1,94 @@
-﻿@{
-    ViewData["Title"] = "About";
-}
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+﻿@model ProductCatalog
 
-<p>Use this area to provide additional information.</p>
+<div class="searcher row col-sm-6">
+    <div class="input-group col-lg-6">
+        <input type="text" class="form-control" placeholder="Search for...">
+        <span class="input-group-btn">
+            <button class="btn btn-default" type="button">Go!</button>
+        </span>
+    </div><!-- /input-group -->
+</div>
+
+
+<div class="row">
+    <table class="table">
+        <tr>
+            @foreach (var item1 in Model.products)
+            {
+                <th>
+                    @Html.DisplayNameFor(model => item1.id)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => item1.name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => item1.description)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => item1.priceUsd.units)
+                </th>
+                <th></th>
+                break;
+            }
+
+        </tr>
+        @{int count = 0;}
+        @foreach (var item2 in Model.products)
+        {
+            count++;
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item2.id)
+                </td>
+                @*<td>
+                        @Html.DisplayFor(modelItem => item.IdType)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.IdColor)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.IdBrand)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.IdProvider)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.IdCatalog)
+                    </td>*@
+                <td>
+                    @Html.DisplayFor(modelItem => item2.name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item2.description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item2.priceUsd.units)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item2.id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item2.id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item2.id })
+                </td>
+            </tr>
+        }
+    </table>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+            @for (int i = 0; i < 5; i++)
+            {
+                int page = i + 1;
+                <li class="page-item"><a class="page-link" >@i</a></li>
+                @*<li class="page-item">@Html.ActionLink(i.ToString(), "Index", "Product", new { Model.CurrentPageIndex }, new { @class = "page-link" })</li>*@
+            }
+            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        </ul>
+    </nav>
+</div> 
+
+<script type="text/javascript">
+    function PagerClick(index) {
+        document.getElementById("hfCurrentPageIndex").value = index;
+        document.forms[0].submit();
+    }
+</script>
