--- a/EcommerseAdmin/EcommerseAdmin/wwwroot/css/site.css
+++ b/EcommerseAdmin/EcommerseAdmin/wwwroot/css/site.css
@@ -28,10 +28,95 @@ body {
     margin: 15px;
 }
 
+.perfil {
+    background-color: #222;
+}
+
+/* Highlighting rules for nav menu items */
+.navbar .navbar-nav .active a,
+.navbar .navbar-nav .active a:hover,
+.navbar .navbar-nav .active a:focus {
+    background-image: none;
+    background-color: #4189C7;
+    color: white;
+}
+
+
+.set-color {
+    color:black !important;
+    background-color:azure !important;
+}
+.navbar.navbar-default.navbar-inverse.navbar-fixed-top {
+    background-color: #333333;
+}
+
+
+
+.fa {
+    margin-right:1em;
+}
+
+.searcher {
+    margin-top:2em;
+    margin-bottom:2em;
+}
 /* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 767px) {
     /* Hide captions */
     .carousel-caption {
         display: none;
     }
+    /* On large screens, convert the nav menu to a vertical sidebar */
+    .navbar {
+        height: 100%;
+        width: calc(25% - 20px);
+    }
+
+    .navbar {
+        border-radius: 0;
+        border-width: 0;
+        height: 100%;
+    }
+
+    .navbar-header {
+        float: none;
+    }
+
+    .navbar .navbar-collapse {
+        border-top: 1px solid #444;
+        padding: 0;
+    }
+
+    .navbar .container-fluid {
+        padding: 0;
+        margin: 0;
+    }
+
+        .navbar .container-fluid .navbar-brand {
+            margin: 0;
+        }
+
+    .navbar ul {
+        float: none;
+    }
+
+    .navbar li {
+        float: none;
+        font-size: 15px;
+        margin: 6px;
+    }
+
+        .navbar li a {
+            padding: 10px 16px;
+            border-radius: 4px;
+        }
+
+    .navbar a {
+        /* If a menu item's text is too long, truncate it */
+        width: 100%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
+
