--- a/EcommerseClient/Views/Shared/_LayoutDos.cshtml
+++ b/EcommerseClient/Views/Shared/_LayoutDos.cshtml
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - EcommerseClient</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -17,8 +16,7 @@
     </environment>*@
 </head>
 <body>
-    
-
+    @Html.Partial("_Navbar")
 
     <partial name="_CookieConsentPartial" />
 
