--- a/EcommerseClient/Views/Shared/_LayoutDos.cshtml
+++ b/EcommerseClient/Views/Shared/_LayoutDos.cshtml
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <title>EcommerseClient</title>
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
+        @*<link rel="stylesheet" href="~/css/site.css" />*@
     </environment>
     @*<environment exclude="Development">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -16,9 +16,9 @@
     </environment>*@
 </head>
 <body>
-    @Html.Partial("_Navbar")
-
-    <partial name="_CookieConsentPartial" />
+    <partial name="_CookieConsentPartial" /> @* qué es?? <div class="container body-content"> *@
+    @*@Html.Partial("_Navbar")*@
+    <partial name="_Navbar" />
 
     <div class="container body-content">
         @RenderBody()
