--- a/EcommerseClient/Views/Home/Index.cshtml
+++ b/EcommerseClient/Views/Home/Index.cshtml
@@ -14,7 +14,8 @@
                             <h5 class="card-title">@item.name</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Buy</button>
+                                @*<button type="button" class="btn btn-sm btn-outline-secondary"><a href="/Home/BuyProduct/@item.id">Buy</a></button>*@
+                                <a href="/Home/BuyProduct/@item.id" class="btn btn-sm btn-outline-secondary">Buy</a>
                                 <spam>@item.priceUsd.currencyCode @item.priceUsd.units.@item.priceUsd.nanos</spam>
                             </div>
                         </div>
