--- a/EcommerseClient/Views/Home/Index.cshtml
+++ b/EcommerseClient/Views/Home/Index.cshtml
@@ -25,6 +25,19 @@
     </div>
 </div>
 
+<p>If you click on me, I will disappear.</p>
+<p>Click me away!</p>
+<p>Click me too!</p>
+
+<script>
+    $(document).ready(function () {
+        $("p").click(function () {
+            $(this).hide();
+        });
+    });
+</script>
+
+
 
 @*
         Mi version
