--- a/EcommerseClient/Views/Home/Cart.cshtml
+++ b/EcommerseClient/Views/Home/Cart.cshtml
@@ -1,60 +1,66 @@
-﻿
+﻿@model List<itemToCart>
+
 <div class="py-5">
     <div class="container bg-light py-3 px-lg-5 py-lg-5">
-        <h3>Your shopping cart is empty!</h3>
-        <p>Items you add to your shopping cart will appear here.</p>
-        <a class="btn btn-primary" href="/" role="button">Browse Products &rarr; </a>
-
-        <div class="row mb-3 py-2">
-            <div class="col">
-                <h3>
-                    @* numero de items en carrito *@
-                    in your Shopping Cart
-                </h3>
-            </div>
-            <div class="col text-right">
-                <form method="POST" action="/cart/empty">
+        @if (Model.Count == 0)
+        {
+            <h3>Your shopping cart is empty!</h3>
+            <p>Items you add to your shopping cart will appear here.</p>
+            <a class="btn btn-primary" href="#" onclick="TraeProduct()" role="button">Browse Products &rarr; </a>
+        }
+        else
+        {
+            <div class="row mb-3 py-2">
+                <div class="col">
+                    <h3>
+                        @Model.Count in your Shopping Cart
+                    </h3>
+                </div>
+                <div class="col text-right">
                     <button class="btn btn-secondary" type="submit">Empty cart</button>
-                    <a class="btn btn-info" href="/" role="button">Browse more products &rarr; </a>
-                </form>
+                    <a class="btn btn-info" href="#" onclick="TraeProduct()" role="button">Browse more products &rarr; </a>
+                </div>
             </div>
-        </div>
-        <hr>
+            <hr>
+            {
+                double total = 0;
+                foreach (var item in @Model)
+                {
+                    <div class="row pt-2 mb-2">
+                        <div class="col text-right">
+                            <a href="">
+                                <img class="img-fluid" style="width: auto; max-height: 60px;"
+                                     src="@item.idProduct" />
+                            </a>
+                        </div>
+                        <div class="col align-middle">
+                            <strong>Nombre de producto</strong><br />
+                            <small class="text-muted">@item.idClient</small>
+                        </div>
+                        <div class="col text-left">
+                            Quantity: @item.quantity <br />
+                            <strong>
+                                @item.currency @item.units.@item.nanos
+                            </strong>
+                        </div>
+                    </div>
+                    total = item.quantity * (item.units + item.nanos / (item.nanos.ToString().Length)) + total;
+                }
 
-        @* iteracion para mostrar items de carrito *@
-        <div class="row pt-2 mb-2">
-            <div class="col text-right">
-                <a href="">
-                    <img class="img-fluid" style="width: auto; max-height: 60px;"
-                         src="fuente de imagen" />
-                </a>
-            </div>
-            <div class="col align-middle">
-                <strong>Nombre de producto</strong><br />
-                <small class="text-muted">SKU: Item.Id</small>
-            </div>
-            <div class="col text-left">
-                Quantity<br />
-                <strong>
-                    Price
-                </strong>
-            </div>
-        </div>
-        @* termina iteracion de carrito *@
-
-        <div class="row pt-2 my-3">
-            <div class="col text-center">
-                <p class="text-muted my-0">Shipping Cost: <strong>renderMoney .shipping_cost</strong></p>
-                Total Cost: <strong>total_cost</strong>
-            </div>
-        </div>
+                <div class="row pt-2 my-3">
+                    <div class="col text-center">
+                        <p class="text-muted my-0">Shipping Cost: <strong id="shippingCost">renderMoney.shipping_cost</strong></p>
+                        Total Cost: <strong id="eltotal">@total</strong>
+                    </div>
+                </div>
+            }
+        }
 
         <hr />
-        @* CHECKOUT -------------------------------*@
         <div class="row py-3 my-2">
             <div class="col-12 col-lg-8 offset-lg-2">
                 <h3>Checkout</h3>
-                <form action="/cart/checkout" method="POST">
+                <form action="/Home/" method="POST">
                     <div class="form-row">
                         <div class="col-md-5 mb-3">
                             <label for="email">E-mail Address</label>
@@ -104,17 +110,17 @@
                             <label for="credit_card_expiration_month">Month</label>
                             <select name="credit_card_expiration_month" id="credit_card_expiration_month"
                                     class="form-control">
-                                <option value="1">January</option>
+                                <option value="1"> January </option>
                                 <option value="2">February</option>
-                                <option value="3">March</option>
+                                <option value="3"> March </option>
                                 <option value="4">April</option>
-                                <option value="5">May</option>
+                                <option value="5"> May </option>
                                 <option value="6">June</option>
-                                <option value="7">July</option>
+                                <option value="7"> July </option>
                                 <option value="8">August</option>
-                                <option value="9">September</option>
+                                <option value="9"> September </option>
                                 <option value="10">October</option>
-                                <option value="11">November</option>
+                                <option value="11"> November </option>
                                 <option value="12">December</option>
                             </select>
                         </div>
@@ -138,9 +144,11 @@
                 </form>
             </div>
         </div>
-        @* TERMINA CHECKOUT *@
-
         <hr />
     </div>
 </div>
+
+<script>
+   
+</script>
 
