--- a/EcommerseAdmin/EcommerseAdmin/Views/Product/Index.cshtml
+++ b/EcommerseAdmin/EcommerseAdmin/Views/Product/Index.cshtml
@@ -1,13 +1,17 @@
 ﻿@model ProductCatalog
 
-<div class="searcher row col-sm-6">
-    <div class="input-group col-lg-6">
-        <input type="text" class="form-control" placeholder="Search for...">
-        <span class="input-group-btn">
-            <button class="btn btn-default" type="button">Go!</button>
-        </span>
-    </div><!-- /input-group -->
-</div>
+@using (Html.BeginForm("SearchProductByName", "Product", FormMethod.Post))
+{
+    <div class="searcher row col-sm-6">
+        <div class="input-group col-lg-6">
+            <input name="name" type="text" class="form-control" placeholder="Search for...">
+            <span class="input-group-btn">
+                <button class="btn btn-default" type="button" onclick="buttonClick()">Go!</button>
+            </span>
+        </div><!-- /input-group -->
+    </div>
+}
+
 
 
 <div class="row">
@@ -30,6 +34,7 @@
                 <th></th>
                 break;
             }
+
 
         </tr>
         @{int count = 0;}
@@ -72,23 +77,24 @@
             </tr>
         }
     </table>
-    <nav aria-label="Page navigation example">
+    <nav aria-label="Page navigation example" style="display:none;">
         <ul class="pagination">
             <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-            @for (int i = 0; i < 5; i++)
+            @for (int i = 0; i < 2; i++)
             {
                 int page = i + 1;
-                <li class="page-item"><a class="page-link" >@i</a></li>
+                <li class="page-item"><a class="page-link">@i</a></li>
                 @*<li class="page-item">@Html.ActionLink(i.ToString(), "Index", "Product", new { Model.CurrentPageIndex }, new { @class = "page-link" })</li>*@
             }
             <li class="page-item"><a class="page-link" href="#">Next</a></li>
         </ul>
     </nav>
-</div> 
+</div>
 
 <script type="text/javascript">
-    function PagerClick(index) {
-        document.getElementById("hfCurrentPageIndex").value = index;
+    function buttonClick() {
+        //document.getElementById("name").value = index;
+        //alert("HI");
         document.forms[0].submit();
     }
 </script>
