--- a/EcommerseClient/Views/Shared/_LayoutDos.cshtml
+++ b/EcommerseClient/Views/Shared/_LayoutDos.cshtml
@@ -16,20 +16,12 @@
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
-    @*<environment exclude="Development">
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-                  asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-                  asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-            <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-    </environment>*@
 
 </head>
 <body onload="TraeProduct()">
-    <partial name="_CookieConsentPartial" /> @* qué es?? <div class="container body-content"> *@
-    @*@Html.Partial("_Navbar")*@
+    <partial name="_CookieConsentPartial" />
     <partial name="_Navbar" />
-
-    <div class="container body-content">
+    <div>
         @RenderBody()
         <hr />
         <footer>
