--- a/EcommerseClient/Views/Shared/_Navbar.cshtml
+++ b/EcommerseClient/Views/Shared/_Navbar.cshtml
@@ -7,16 +7,11 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#" onclick="TraeProduct()">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/Home" onclick="TraeProduct()">Home <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
             <form class="form-inline my-2">
-                @*<select onchange="location = this.value" class="custom-select custom-select-sm custom-control-inline">
-                    <option>Currency</option>
-                    <option value="/Home/Index?currency=USD">USD</option>
-                    <option value="/Home/Index?currency=MXN">MXN</option>
-                </select>*@
-                <select id="currencySelec" onchange="TraeProduct()" class="custom-select custom-select-sm custom-control-inline">
+                <select id="currencySelec" class="custom-select custom-select-sm custom-control-inline">
                     <option>USD</option>
                     <option>MXN</option>
                 </select>
