--- a/EcommerseClient/Views/Home/CheckOut.cshtml
+++ b/EcommerseClient/Views/Home/CheckOut.cshtml
@@ -1,4 +1,28 @@
 ﻿@model CheckoutModel
 
-<h2>CheckOut</h2>
+    <div class="container bg-light py-3 px-lg-5">
+        <div class="row mt-5 py-2">
+            <div class="col">
+                <h3>
+                    Your order is complete!
+                </h3>
+                <p>
+                    Order Confirmation ID: <strong>@Model.OderId</strong>
+                    <br>
+                    Shipping Tracking ID: <strong>@Model.ShippingTrackingId</strong>
+                </p>
+                <p>
+                    <br>
+                    Total Paid: <strong>@Model.TotalToPay</strong>
+                </p>
+                <a class="btn btn-primary" href="/" role="button">Browse other products &rarr; </a>
+            </div>
+        </div>
+        <hr />
+
+        <div class="row mt-5 py-2">
+            recomendations
+        </div>
+    </div>
+
 
